# pkexec-debhelper

./: pyproject.toml  setup.py
Sequence/: pkexec.pm  polkitdev.pm
bin_xpkexec/: xpkexec
debian/: changelog  control  copyright  pkexec-debhelper.install  pkexec-debhelper.manpages  polkit-debhelper.install  polkit-debhelper.links  python3-pkexec-debhelper.install  rules  xpkexec.install
doc/: dh_pkexec.md  example
edupals/pkexec/: pkexechelper.py
man/: dh_pkexec
pkexec-debhelper/: .polkit-debhelper-library.sh.swp  polkit-debhelper-definitions.sh  polkit-debhelper-library.sh
pkexec-debhelper/skel/: polkit.skel
polkit-debhelper/: polkit-debhelper-definitions.sh  polkit-debhelper-library.sh
python-pkexec-debhelper/: dh_pkexec  example  pkexec-debhelper.py  pkexecdebhelper.py  pkla.skel  polkit.skel
src/: pkexechelper.py
src/edupals/pkexec/: pkexechelper.py
templates/: pkla.skel  polkit.skel  rules.skel
