[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name='pkexec-debhelper'
version="0.15"
description='Generate polkit files from config file and install'
authors=[
  {name='Raul Rodrigo Segura',email='raurodse@gmail.com'},
  ]
requires-python=">=3.8"
urls = {repository="https://github.com/edupals/pkexec-debhelper"}
keywords=['software','debhelper','development']
license= {text='GPL-3'}
classifiers=[
  "Programming Language :: Python :: 3",

]

[tool.setuptools]
script-files = [ 'bin/dh_pkexec']

[tool.setuptools.package-dir]
"edupals.pkexec" = "src"

[tool.setuptools.data-files]
'usr/share/perl5/Debian/Debhelper/Sequence/'=['Sequence/pkexec.pm']
'usr/share/pkexec-debhelper/skel/'=['templates/pkla.skel','templates/polkit.skel']
